work on all the file

--- a/NLP/Basic Concept/Removing stop words with NLTK in Python.ipynb
+++ b/NLP/Basic Concept/Removing stop words with NLTK in Python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 1248,
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "3QvqhCwWTeDB"
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "executionInfo": {
      "elapsed": 40133,
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "executionInfo": {
      "elapsed": 40103,
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "executionInfo": {
      "elapsed": 40069,
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "executionInfo": {
      "elapsed": 40051,
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -355,10 +355,8 @@
        " 'Challenges in natural language processing frequently involve natural language understanding, natural languagegeneration frequently from formal, machine-readable logical forms), connecting language and machine perception, managing human-computer dialog systems, or some combination thereof.']"
       ]
      },
-     "execution_count": 13,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 10,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -398,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "executionInfo": {
      "elapsed": 756,
@@ -421,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -449,10 +447,8 @@
        " 'You are studying NLP article']"
       ]
      },
-     "execution_count": 17,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 12,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -482,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -501,35 +497,22 @@
     "id": "NUlG7TrEW07Y",
     "outputId": "2d55eda9-719e-459d-f7b9-1afd06d95a4e"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Hello everyone.',\n",
-       " 'Welcome to GeeksforGeeks.',\n",
-       " 'You are studying NLP article']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "##  PunktSentenceTokenizer – When we have huge chunks of data then it is efficient to use it.\n",
     "import nltk.data\n",
     "\n",
     "# Loading PunktSentenceTokenizer using English pickle file\n",
-    "tokenizer = nltk.data.load('tokenizers/punkt/PY3/english.pickle')\n",
-    "text = \"Hello everyone. Welcome to GeeksforGeeks. You are studying NLP article\"\n",
-    "tokenizer.tokenize(text)"
+    "\n",
+    "\n",
+    "# tokenizer = nltk.data.load('tokenizers/punkt/PY3/english.pickle')\n",
+    "# text = \"Hello everyone. Welcome to GeeksforGeeks. You are studying NLP article\"\n",
+    "# tokenizer.tokenize(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -548,35 +531,22 @@
     "id": "89WbZwuFX6mu",
     "outputId": "8d3a155c-c53a-4036-be28-d9e76739af03"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Hola amigo.', 'Estoy bien.']"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Tokenize sentence of different language – One can also tokenize sentence from different languages \n",
     "## using different pickle file other than English.\n",
     "\n",
-    "import nltk.data\n",
+    "# import nltk.data\n",
     "\n",
-    "spanish_tokenizer = nltk.data.load('tokenizers/punkt/PY3/spanish.pickle')\n",
+    "# spanish_tokenizer = nltk.data.load('tokenizers/punkt/PY3/spanish.pickle')\n",
     "\n",
-    "text = 'Hola amigo. Estoy bien.'\n",
-    "spanish_tokenizer.tokenize(text)\n"
+    "# text = 'Hola amigo. Estoy bien.'\n",
+    "# spanish_tokenizer.tokenize(text)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -602,10 +572,8 @@
        "['Hello', 'everyone', '.', 'Welcome', 'to', 'GeeksforGeeks']"
       ]
      },
-     "execution_count": 21,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 17,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -644,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -670,10 +638,8 @@
        "[\"Let's\", 'see', 'how', \"it's\", 'working']"
       ]
      },
-     "execution_count": 24,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 18,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -688,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -714,10 +680,8 @@
        "[\"Let's\", 'see', 'how', \"it's\", 'working']"
       ]
      },
-     "execution_count": 25,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 19,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -759,7 +723,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.3"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
